src/test/deca/context/valid/created/decl_class/met_avant_decl.deca
// Description :
//		on fait un appel a met avant sa declaration
//
// Resultats :
//		Ok


class A{
	int x = met();
	int met(){
	return 1;
	}
}

