src/test/deca/context/invalid/created/return/return_double_int.deca
// Description :
//    test double return avec int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: 

class a{
int met(){
int a = 1;
return a;return a;}
}
